--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,6 +2,8 @@
 <% if @restaurants.any? %>
   <% @restaurants.each do |restaurant| %>
     <h2> <%= restaurant.name %> </h2>
+    <h3>Average rating: <%= restaurant.average_rating.to_i %></h3>
+    <%= star_rating(restaurant.average_rating) %>
 
     	<h3>Reviews for <%= restaurant.name %></h3>
 		<% if restaurant.reviews.any? %>
