--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -11,7 +11,11 @@
 		    <% restaurant.reviews.each do |review| %>
 		      <li>
 		        <%= review.thoughts %>, <strong><%= review.rating %></strong>/5
-		      </li>
+				<%= link_to "Endorse", review_endorsements_path(review), class: 'endorsements-link' %>
+		      	<span class="endorsements_count"> <%= review.endorsements.count %> </span> <%= 'endorsement'.pluralize(review.endorsements.count) %>
+		    	</li>
+
+		      <p><%= pluralize review.endorsements.count, 'endorsement' %></p>
 		    <% end %>
 		  </ul>
 		<% else %>
